Fixed overflow-x

--- a/seuss/css/generalStyle.css
+++ b/seuss/css/generalStyle.css
@@ -1,5 +1,6 @@
 body
 {
+	overflow-x: hidden;
 	background-color: #e7e7e7;
 	background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230ee8e0' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
 	/* Pattern from: http://www.heropatterns.com/ (Diagonal Stripes) */
